--- a/Reporting/reporting/src/main/java/PersonsReport.jrxml
+++ b/Reporting/reporting/src/main/java/PersonsReport.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-04-15T10:33:33 -->
+<!-- 2016-04-15T11:46:38 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PersonsReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fb60b947-553b-404b-8e2a-77085a525eec">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="JBeebs"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
@@ -72,7 +72,19 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="82" splitType="Stretch">
+			<image>
+				<reportElement x="0" y="5" width="240" height="72" uuid="7354ff6d-f2f7-4784-9035-d9553248a439"/>
+				<imageExpression><![CDATA["http://www.up.ac.za/themes/up/img/up-logo.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="340" y="20" width="187" height="44" uuid="8f6a7f60-36c4-4aac-a106-84b9482fdb90"/>
+				<textElement>
+					<font size="19"/>
+				</textElement>
+				<text><![CDATA[Person Report]]></text>
+			</staticText>
+		</band>
 	</title>
 	<pageHeader>
 		<band height="35" splitType="Stretch"/>
